--- a/PProvost.DesktopUtils/PProvost.DesktopUtils.nuspec
+++ b/PProvost.DesktopUtils/PProvost.DesktopUtils.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>PProvost.DesktopUtils</id>
     <title>Peter Provost's Windows Desktop Utilities All-in-one Package</title>
-    <version>2013.06.13</version>
+    <version>2013.06.20</version>
     <authors>Peter Provost</authors>
     <owners>Peter Provost</owners>
     <summary>My set of utilities and tools for a new generic Windows machine.</summary>
@@ -22,6 +22,7 @@
 			<dependency id="adobereader" />
 			<dependency id="autohotkey_l" />
       <dependency id="ccleaner" />
+			<dependency id="filezilla" />
 			<dependency id="greenshot" />
       <dependency id="putty" />
 			<dependency id="SkyDrive" />
