Added Snippet Designer

--- a/PProvost.VS2012.Extensions/PProvost.VS2012.Extensions.nuspec
+++ b/PProvost.VS2012.Extensions/PProvost.VS2012.Extensions.nuspec
@@ -16,6 +16,7 @@
       ColorThemeEditor
       VsCommands
       Tfs-GoOffline
+			Snippet Designer
 			NUnit Test Adapter
 			xUnit.net Test Adapter
 			Chutzpah Test Adapter (QUnit and Jasmine)
